# SplinterlandsRust

./: Cargo.toml
assets/: cards.csv  new_cards.csv
src/: battle.rs  battlefactory.rs  battleproxy.rs  carddata.rs  cardparser.rs  deck.rs  deckproxy.rs  enums.rs  main.rs  monster.rs  registry.rs  roundrobin.rs  summoner.rs  targeting.rs
src/battles/: attacking.rs  battle.rs  battlechecker.rs  battledata.rs  mod.rs  monsterkey.rs  monsterspeed.rs  roundrobin.rs  roundrobin2.rs  roundrobiniter.rs  setpick.rs  targeting.rs
src/cardparse/: carddata.rs  cardparser.rs  enums.rs  mod.rs
src/gamedata/: mod.rs  monster.rs  registry.rs  summoner.rs
src/tourney/: combos.rs  elo.rs  mod.rs
