[package]
name = "SplinterKey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clappers = "2.0.3"
csv = "1.1.6"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
